Fix issue with z-index (heart overlaps sidebar)

--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -82,7 +82,6 @@
   top: 5px;
   right: 10px;
   font-size: 2.2rem;
-  z-index: 2;
 }
 
 .itemlist {
